@@ -4,6 +4,8 @@ o UPDATE: added parallel processing for large spell checks
 
 o ADD: `textcleaner` functionality for free association response tasks (*hunspell* is used to expedite processing)
 
+o FIX: `singularize` handling of words ending in "es"
+
 
 Changes in version 1.3.4
 
